backport: re PR target/60111 ([SH] ICE compiling Newlib)

gcc/
	Backport from mainline
	2014-11-20  Segher Boessenkool  <segher@kernel.crashing.org>

	PR target/60111
	* config/sh/sh.c: Use signed char for signed field.

From-SVN: r217958